{{$NEXT}}

0.6.15  2022-04-26T06:00:31+12:00
    - Replace LibXML::HashMap::Maker with LibXML::HashMap::NodeSet.
    - Further thread safety improvements, including bare uses of
      'require' and use of the $!hstore attribute in LibXML::Node:Set
      and LibXML::Node::List.

0.6.14  2022-04-07T14:39:40+12:00
    - Fixed thread safety issues in catalog and class loading - vrurg++

0.6.13  2022-04-01T11:04:54+13:00
    - Fix LibXSLT broken in 0.6.11 by the withdrawal of xml6_gbl_message_func()
      external symbol. Replaced by LibXML::ErrorHandling :&set-generic-error-handler
      exported sub.

0.6.12  2022-03-31T17:06:34+13:00
    - Add LibXML::Raw::CLib module. To encapsulate existing use of memcpy
      and free
    - move release repository from CPAN to zef ecosystem

0.6.11  2022-01-22T16:18:22+13:00
    - Add LibXML::_Validator role. Performed by LibXML::{Dtd|Schema|RelaxNG}
    - Add Windows support. This module pre-builds the binding library
      (xml6) and installs a copy of libxml.dll.

0.6.10  2021-10-30T06:00:36+13:00
    - Fix LibXML::Parser options setup and etc/benchmark.raku core-dump #64

0.6.9  2021-09-20T11:21:08+12:00
    - Move @ClassMap from LibXML::Item to LibXML::Config and change it
      from a constant to an 'our' scoped variable. Tweak the box-class()
      sub in LibXML::Item to better support subclassing - see t/00subclass.t
    - baseURI() now defaults to the document URI().

0.6.8  2021-08-27T15:35:11+12:00
    Conformance to W3C::DOM 0.0.3:
    - Default to DOM style createDocument() unless the first argument is defined
      and matches /^\d'.'\d$/, i.e. it's an XML version string.
    - Provide a cloneNode($deep) multi candidate.
    - Add a LibXML::Text splitText() DOM method
    - Rename role LibXML::_StringyNode to LibXML::_CharacterData. Base it
      squarely on the W3C DOM CharacterData abstract role.

0.6.7  2021-08-24T08:14:25+12:00
    - protect all parse and validation contexts. These require global